css/style.css
.navbar .nav-link {
  font-size: 14px;
  text-transform: uppercase;
  padding-left: 1rem !important;
  padding-right: 1rem !important;
}

.navbar .nav-item.active {
  border-left: #444 3px solid;
}

.carousel-item {
  height: 93vh;
}

.carousel-image-1 {
  background: url("../img/image1.jpg");
  background-size: cover;
}

.carousel-image-2 {
  background: url("../img/image2.jpg");
  background-size: cover;
}

.carousel-image-3 {
  background: url("../img/image3.jpg");
  background-size: cover;
}

#home-heading {
  position: relative;
  min-height: 200px;
  background: url("../img/lights.jpg");
  background-attachment: fixed;
  background-repeat: no-repeat;
  text-align: center;
  color: #fff;
}

.dark-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
}

#video-play {
  position: relative;
  min-height: 200px;
  background: url("../img/media.jpg");
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: 0 -300px;
  text-align: center;
  color: #fff;
}

#video-play a {
  color: #fff;
}

.modal .fade .modal-dialog {
  transform: none !important;
}

